RFE 1762809: remove dependencies on sun internal classes